# libsdl-swift-cmake-static

./: CMakeLists.txt  Makefile  README.md  main.swift
.github/workflows/: cmake.yml
